# libreplaygain

./: CMakeLists.txt  meson.build
include/: meson.build
include/replaygain/: gain_analysis.h
src/: CMakeLists.txt  gain_analysis.c  meson.build
